FEAT: Search function with template complete

--- a/itinerary/templates/itinerary/main.html
+++ b/itinerary/templates/itinerary/main.html
@@ -35,6 +35,6 @@
     </style>
 </head>
 <body>
-    <a href="link_to_your_adventure_planning_page" class="adventure-button">Begin planning your adventure</a>
+    <a href="{% url 'search_park_events' %}" class="adventure-button">Begin planning your adventure</a>
 </body>
 </html>
