FEAT: Login logic for previous and new users

--- a/itinerary/templates/itinerary/create_itinerary.html
+++ b/itinerary/templates/itinerary/create_itinerary.html
@@ -1,5 +1,5 @@
 {% block content %}
-<h2>Create Itinerary</h2>
+<h2>Create Itinerary and Search Park Events</h2>
 <form method="post" class="itinerary-form">
     {% csrf_token %}
     <p>
@@ -18,7 +18,7 @@
         <label for="id_end_date">End Date:</label>
         {{ form.end_date }}
     </p>
-    <button type="submit">Save Itinerary</button>
+    <button type="submit">Continue to Search Results</button>
 </form>
 {% endblock %}
 
