--- a/itinerary/templates/itinerary/create_itinerary.html
+++ b/itinerary/templates/itinerary/create_itinerary.html
@@ -7,7 +7,7 @@
         {{ form.title }}
     </p>
     <p>
-        <label for="id_park_name">Park Name:</label>
+        <label for="id_park_title">Park Name:</label>
         {{ form.park_title }}
     </p>
     <p>
@@ -18,7 +18,7 @@
         <label for="id_end_date">End Date:</label>
         {{ form.end_date }}
     </p>
-    <button type="submit">Continue to Search Results</button>
+    <button type="submit">Create Itinerary</button>
 </form>
 {% endblock %}
 
