--- a/itinerary/templates/itinerary/main.html
+++ b/itinerary/templates/itinerary/main.html
@@ -1,40 +1,45 @@
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Main Page - ParkPioneer</title>
-    <style>
-        body, html {
-            height: 100%;
-            margin: 0;
-            font-family: Arial, sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            background-color: #f0f0f0; /* Subtle background color */
-            /* background-image: url('path_to_your_nature-themed_background_image.jpg'); Add your background image */
-            background-size: cover;
-            background-repeat: no-repeat;
-            background-position: center;
-        }
-        .adventure-button {
-            background-color: #228B22; /* Forest green */
-            color: white;
-            padding: 20px 40px;
-            border: none;
-            border-radius: 5px;
-            font-size: 18px;
-            cursor: pointer;
-            text-decoration: none; /* In case you want to use an <a> element */
-        }
-        .adventure-button:hover {
-            background-color: #1c7a1c; /* A slightly darker forest green */
-        }
-    </style>
-</head>
-<body>
-    <a href="{% url 'search_park_events' %}" class="adventure-button">Begin planning your adventure</a>
-</body>
-</html>
+
+{% block content %}
+<div class="main-content">
+    <p>You have no Itineraries yet.</p>
+    <a href="{% url 'create_itinerary' %}" class="create-itinerary-button">
+        <span class="plus-icon">+</span> Create Itinerary
+    </a>
+
+</div>
+{% endblock %}
+
+{% block extra_css %}
+<style>
+.main-content {
+    text-align: center;
+    /* Add any additional styling you need for this container */
+}
+
+.create-itinerary-button {
+    background-color: #228B22; /* Adjust the color to match your design */
+    color: white;
+    padding: 10px 20px;
+    margin: 10px 0;
+    border: none;
+    border-radius: 5px;
+    font-size: 16px;
+    cursor: pointer;
+    text-decoration: none; /* In case you want to use an <a> element */
+    display: inline-block; /* Centers the button in the text */
+}
+
+.create-itinerary-button .plus-icon {
+    font-size: 24px; /* Larger font size for the plus icon */
+    display: inline-block;
+    margin-right: 5px;
+}
+
+.create-itinerary-button:hover {
+    background-color: #1c7a1c; /* A slightly darker forest green for hover state */
+}
+
+/* Rest of the styles */
+</style>
+{% endblock %}
