FEAT: Update and Delete

--- a/itinerary/templates/itinerary/event_list.html
+++ b/itinerary/templates/itinerary/event_list.html
@@ -1,6 +1,6 @@
 
 {% block content %}
-<h2>Events for {{ park_title }}</h2>
+<h2>Events for {{ event.park_title }}</h2>
 {% for event in events %}
 <div class="event">
     <!-- Wrap the title in an anchor tag that links to the event_detail page for the event -->
