CHORE: Clean up

--- a/itinerary/templates/itinerary/base.html
+++ b/itinerary/templates/itinerary/base.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Park Pioneer</title>
-    <!-- Add your stylesheet links here -->
 </head>
 <body>
     <header>
@@ -23,15 +22,11 @@
 
     <main>
         {% block content %}
-        <!-- Content will go here -->
         {% endblock content %}
     </main>
 
     <footer>
-        <!-- Footer content here -->
     </footer>
-
-    <!-- Add your scripts at the bottom of the body -->
 </body>
 </html>
 
@@ -48,7 +43,7 @@ body {
     justify-content: space-between;
     align-items: center;
     padding: 10px;
-    background-color: #eee; /* Light grey background */
+    background-color: #eee; 
 }
 
 .title-bar h1 {
@@ -58,7 +53,7 @@ body {
 nav ul {
     list-style-type: none;
     padding: 0;
-    background-color: #f0f0f0; /* Slightly darker grey */
+    background-color: #f0f0f0;
 }
 
 nav ul li {
@@ -74,12 +69,12 @@ nav ul li a {
 }
 
 nav ul li a:hover {
-    background-color: #ddd; /* Light grey background on hover */
+    background-color: #ddd; 
 }
 
 /* Style for the main action button 'Begin Planning your Adventure' */
 .main-action-button {
-    background-color: #228B22; /* Forest Green */
+    background-color: #228B22; 
     color: white;
     padding: 10px 20px;
     text-decoration: none;
@@ -89,6 +84,6 @@ nav ul li a:hover {
 }
 
 .main-action-button:hover {
-    background-color: #1C7C1B; /* Darker Forest Green */
+    background-color: #1C7C1B; 
 }
 </style>
