--- a/itinerary/templates/itinerary/create_itinerary.html
+++ b/itinerary/templates/itinerary/create_itinerary.html
@@ -32,12 +32,12 @@ body {
     align-items: center;
     height: 100vh;
     margin: 0;
-    background-color: #4B5320; /* Faded forest green background */
+    background-color: #4B5320; 
 }
 
 .main-content {
     text-align: center;
-    background-color: rgba(255, 255, 255, 0.8); /* Faded white background */
+    background-color: rgba(255, 255, 255, 0.8); 
     padding: 20px;
     border-radius: 10px;
 }
@@ -65,18 +65,18 @@ body {
 }
 
 .submit-button {
-    background-color: #228B22; /* Darker green color */
+    background-color: #228B22; 
     color: white;
     padding: 10px 20px;
     border: none;
     border-radius: 5px;
     font-size: 16px;
     cursor: pointer;
-    transition: background-color 0.3s; /* Add transition for smooth hover effect */
+    transition: background-color 0.3s; 
 }
 
 .submit-button:hover {
-    background-color: #1c7a1c; /* Slightly darker green for hover state */
+    background-color: #1c7a1c; 
 }
 </style>
 {% endblock %}
