--- a/itinerary/templates/itinerary/event_list.html
+++ b/itinerary/templates/itinerary/event_list.html
@@ -3,10 +3,8 @@
     <h2>Events for {{ event.park_title }}</h2>
     {% for event in events %}
     <div class="event">
-        <!-- Wrap the title in an anchor tag that links to the event_detail page for the event -->
         <h3><a href="{% url 'event_details' event.id %}" style="color: #228B22;">{{ event.title }}</a></h3>
         <p>Date: {{ event.date }}</p>
-        <!-- Display other event details -->
     </div>
     {% endfor %}
 </div>
@@ -14,15 +12,14 @@
 
 {% block extra_css %}
 <style>
-/* Add the rest of your styles as needed */
 
 body {
-    background-color: #0B6623; /* Dark forest green */
+    background-color: #0B6623; 
 }
 
 .event-list-container {
     text-align: center;
-    background-color: rgba(255, 255, 255, 0.8); /* Faded white background */
+    background-color: rgba(255, 255, 255, 0.8); 
     padding: 20px;
     border-radius: 10px;
 }
@@ -32,11 +29,11 @@ body {
 }
 
 a {
-    color: #228B22; /* Dark forest green for links */
+    color: #228B22; 
 }
 
 a:hover {
-    color: #1c7a1c; /* Darker green for hover state */
+    color: #1c7a1c; 
 }
 </style>
 {% endblock %}
