--- a/itinerary/templates/itinerary/main.html
+++ b/itinerary/templates/itinerary/main.html
@@ -15,7 +15,7 @@ body {
     align-items: center;
     height: 100vh;
     margin: 0;
-    background-color: #228B22; /* Forest green background */
+    background-color: #228B22; 
 }
 
 .main-content {
@@ -23,33 +23,33 @@ body {
 }
 
 .no-itineraries-message {
-    font-size: 36px; /* Larger font size */
-    margin-bottom: 20px; /* Increase bottom margin */
+    font-size: 36px; 
+    margin-bottom: 20px; 
 }
 
 .create-itinerary-button {
-    background-color: #1c7a1c; /* Darker green */
+    background-color: #1c7a1c; 
     color: white;
-    padding: 15px 30px; /* Increase padding */
+    padding: 15px 30px; 
     margin: 10px 0;
-    border: 2px solid #145214; /* Dark green border */
-    border-radius: 10px; /* Increase border radius */
-    font-size: 24px; /* Larger font size */
+    border: 2px solid #145214; 
+    border-radius: 10px; 
+    font-size: 24px; 
     cursor: pointer;
     text-decoration: none;
-    transition: background-color 0.3s; /* Add transition for smooth hover effect */
+    transition: background-color 0.3s; 
 }
 
 .create-itinerary-button .plus-icon {
-    font-size: 36px; /* Larger plus icon */
+    font-size: 36px; 
     display: inline-block;
-    margin-right: 10px; /* Increase right margin */
+    margin-right: 10px; 
 }
 
 .create-itinerary-button:hover {
-    background-color: #145214; /* Slightly darker green for hover state */
+    background-color: #145214; 
 }
 
-/* Rest of the styles */
+
 </style>
 {% endblock %}
