--- a/itinerary/templates/itinerary/itinerary_detail.html
+++ b/itinerary/templates/itinerary/itinerary_detail.html
@@ -35,11 +35,11 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    gap: 20px; /* Adjust the space between columns */
+    gap: 20px; 
 }
 
 .day-column {
-    background-color: #e9f5e9; /* Light green background */
+    background-color: #e9f5e9; 
     padding: 20px;
     border-radius: 20px;
     align-items: flex-start;
@@ -47,16 +47,15 @@
 }
 
 .event-card {
-    background-color: #f7f7f7; /* Light grey background */
-    border: 1px solid #ddd; /* Light grey border */
+    background-color: #f7f7f7; 
+    border: 1px solid #ddd; 
     margin-bottom: 10px;
     padding: 10px;
     border-radius: 4px;
-     /* Adjust the height as needed */
 }
 
 .edit-button, .delete-button {
-    background-color: #dc3545; /* Bootstrap 'danger' red */
+    background-color: #dc3545; 
     color: white;
     padding: 5px 10px;
     border: none;
@@ -67,9 +66,8 @@
 }
 
 .delete-button {
-    background-color: #dc3545; /* Keeps the button red */
+    background-color: #dc3545; 
     cursor: pointer;
 }
-/* Add more styling as needed */
 </style>
 {% endblock %}
