--- a/itinerary/templates/itinerary/itinerary_list.html
+++ b/itinerary/templates/itinerary/itinerary_list.html
@@ -31,15 +31,14 @@
 
 {% block extra_css %}
 <style>
-/* Add the rest of your styles as needed */
 
 body {
-    background-color: #0B6623; /* Dark forest green */
+    background-color: #0B6623; 
 }
 
 .itinerary-list-container {
     text-align: center;
-    background-color: rgba(255, 255, 255, 0.8); /* Faded white background */
+    background-color: rgba(255, 255, 255, 0.8); 
     padding: 20px;
     border-radius: 10px;
 }
@@ -62,19 +61,19 @@ body {
 }
 
 .btn-primary {
-    background-color: #228B22; /* Darker green color */
+    background-color: #228B22; 
 }
 
 .btn-secondary {
-    background-color: #6c757d; /* Dark grey color */
+    background-color: #6c757d; 
 }
 
 .btn-warning {
-    background-color: #FFD700; /* Goldenrod color */
+    background-color: #FFD700;
 }
 
 .btn-danger {
-    background-color: #8B0000; /* Dark red color */
+    background-color: #8B0000; 
 }
 
 .btn-primary:hover, .btn-secondary:hover, .btn-warning:hover, .btn-danger:hover {
