--- a/member/templates/registration/login.html
+++ b/member/templates/registration/login.html
@@ -7,8 +7,8 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: forestgreen; /* Set background color to forest green */
-            color: black; /* Set text color to black */
+            background-color: forestgreen; 
+            color: black; 
             display: flex;
             justify-content: center;
             align-items: center;
@@ -20,7 +20,7 @@
             padding: 20px;
             border: 1px solid #ccc;
             border-radius: 5px;
-            background-color: rgba(255, 255, 255, 0.9); /* Semi-transparent white background */
+            background-color: rgba(255, 255, 255, 0.9); 
         }
         .form-group {
             margin-bottom: 15px;
@@ -38,15 +38,15 @@
         .form-group button {
             width: 100%;
             padding: 10px;
-            background-color: #007bff; /* Set button background color */
-            color: white; /* Set button text color */
+            background-color: #007bff; 
+            color: white; 
             border: none;
             border-radius: 5px;
             cursor: pointer;
             transition: background-color 0.3s ease;
         }
         .form-group button:hover {
-            background-color: #0056b3; /* Change background color on hover */
+            background-color: #0056b3; 
         }
     </style>
 </head>
